--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,11 @@ language: objective-c
 script:
 - set -o pipefail && xcodebuild test -workspace Example/HPTest.xcworkspace -scheme HPTest-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
+# Following extra lines added for automate cocoapod release 
+# Late if need can follow https://fuller.li/posts/automated-cocoapods-releases-with-ci/ 
+
+deploy:
+  provider: script
+  script: ./scripts/push.sh
+  on:
+    tags: true
