--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@
 
 osx_image: xcode 8.3
 language: objective-c
+before_install:
+  - export IOS_SIMULATOR_UDID=`instruments -s devices | grep "iPhone 6 (9.3" | awk -F '[ ]' '{print $4}' | awk -F '[\[]' '{print $2}' | sed 's/.$//'`
+  - echo $IOS_SIMULATOR_UDID
+  - open -a "simulator" --args -CurrentDeviceUDID $IOS_SIMULATOR_UDID
+  - travis_retry xcodebuild -workspace workspace.xcworkspace -scheme scheme -sdk iphonesimulator [...]
 # cache: cocoapods
 # podfile: Example/Podfile
 # before_install:
