--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
+# references:
+# * http://www.objc.io/issue-6/travis-ci.html
+# * https://github.com/supermarin/xcpretty#usage
+
+osx_image: xcode 8.3
 language: objective-c
-osx_image: xcode7
+cache: cocoapods
+podfile: Example/Podfile
 before_install:
-- gem install xcpretty --no-document
+ - gem install cocoapods # Since Travis is not always on latest version
+ - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild -project Commander.xcodeproj -scheme Commander -sdk macosx test | xcpretty -c
-- set -o pipefail && xcodebuild -project Commander.xcodeproj -scheme Commander -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO test | xcpretty -c
+- set -o pipefail && xcodebuild test -workspace Example/HPTest.xcworkspace -scheme HPTest-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
+# Following extra lines added for automate cocoapod release 
+# Late if need can follow https://fuller.li/posts/automated-cocoapods-releases-with-ci/ 
+
 deploy:
   provider: script
   script: ./scripts/push.sh
