--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
  - gem install cocoapods # Since Travis is not always on latest version
  - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/HPTest.xcworkspace -scheme HPTest-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+# - set -o pipefail && xcodebuild test -workspace Example/HPTest.xcworkspace -scheme HPTest-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
 # Following extra lines added for automate cocoapod release 
 # Late if need can follow https://fuller.li/posts/automated-cocoapods-releases-with-ci/ 
