--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ cache: cocoapods
 podfile: Example/Podfile
 before_install:
  - gem install cocoapods # Since Travis is not always on latest version
- - pod install --project-directory=Example
+ - pod update XMLDictionary
+ - pod update --project-directory=Example
+after_install:
+- pod update XMLDictionary
 script:
 # - set -o pipefail && xcodebuild test -workspace Example/HPTest.xcworkspace -scheme HPTest-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
