--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ cache: cocoapods
 podfile: Example/Podfile
 before_install:
  - gem install cocoapods # Since Travis is not always on latest version
- - pod update XMLDictionary
- - pod update --project-directory=Example
-after_install:
-- pod update XMLDictionary
+ - pod install --project-directory=Example
 script:
 # - set -o pipefail && xcodebuild test -workspace Example/HPTest.xcworkspace -scheme HPTest-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
