--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 
 deploy:
   provider: script
-  script: ./scripts/push.sh
+  script:sh ./scripts/push.sh
   skip_cleanup: true
   on:
     tags: false
