--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 
 deploy:
   provider: script
-  script: chmod +x ./scripts/push.sh 
+  script: chmod +x scripts/push.sh && scripts/push.sh
   skip_cleanup: true
   on:
     tags: false
