--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ osx_image: xcode 8.3
 language: objective-c
 cache: cocoapods
 podfile: Example/Podfile
+env:
+  global:
+    - LC_CTYPE=en_US.UTF-8
+    - LANG=en_US.UTF-8
+    - FRAMEWORK_NAME="HPTest"
+    - UPDATE_DOCS="false"
+    
 before_install:
  - gem install cocoapods # Since Travis is not always on latest version
  - pod install --project-directory=Example
@@ -16,8 +23,10 @@ script:
 # Late if need can follow https://fuller.li/posts/automated-cocoapods-releases-with-ci/ 
 
 deploy:
-  provider: script
-  script: ./scripts/push.sh
+  provider: releases
+  api_key:
+    secure: 00a6c9a63fe3668f7e029e8359cec86e6fad5773
+    file: "$FRAMEWORK_NAME.framework.zip"
   skip_cleanup: true
   on:
     tags: true
