--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 
 deploy:
   provider: script
-  script: ./scripts/push.sh production $TRAVIS_TAG
+  script: chmod u+x ./scripts/push.sh 
   skip_cleanup: true
   on:
     branch: master
